--- a/action.yml
+++ b/action.yml
@@ -6,10 +6,35 @@ branding:
   icon: 'upload'
   color: 'gray-dark'
 
+inputs:
+  prefix:
+    description: 'Value inserted in front of the julia command, e.g. for running xvfb-run julia [...]'
+    default: ''
+    required: false
+
 runs:
   using: 'composite'
   steps:
-    - run: julia --color=yes --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+    - run: |
+        # The Julia command that will be executed
+        julia_cmd=( julia --color=yes --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()' )
+
+        # Add the prefix in front of the command if there is one
+        prefix="${{ inputs.prefix }}"
+        [[ -n $prefix ]] && julia_cmd=( "$prefix" "${julia_cmd[@]}" )
+
+        # Run the Julia command
+        "${julia_cmd[@]}"
       shell: bash
-    - run: julia --color=yes --project=docs/ docs/make.jl
+
+    - run: |
+        # The Julia command that will be executed
+        julia_cmd=( julia --color=yes --project=docs/ docs/make.jl )
+
+        # Add the prefix in front of the command if there is one
+        prefix="${{ inputs.prefix }}"
+        [[ -n $prefix ]] && julia_cmd=( "$prefix" "${julia_cmd[@]}" )
+
+        # Run the Julia command
+        "${julia_cmd[@]}"
       shell: bash
