--- a/action.yml
+++ b/action.yml
@@ -18,6 +18,7 @@ runs:
     - name: Install GitHubActions.jl in global environment
       run: |
         using Pkg
+        Pkg.activate("docs-logger-env"; shared=true)
         Pkg.add(name="GitHubActions", version="0.1")
       shell: julia --color=yes {0}
     - run: |
@@ -34,6 +35,7 @@ runs:
     - run: |
         # The Julia command that will be executed
         julia_cmd=( julia --color=yes --code-coverage --project=docs/ -e '
+            pushfirst!(LOAD_PATH, "@docs-logger-env") # access GitHubActions.jl
             using Logging: global_logger
             using GitHubActions: GitHubActionsLogger
             global_logger(GitHubActionsLogger())
