--- a/action.yml
+++ b/action.yml
@@ -35,10 +35,10 @@ runs:
     - run: |
         # The Julia command that will be executed
         julia_cmd=( julia --color=yes --code-coverage --project=docs/ -e '
-            pushfirst!(LOAD_PATH, "@docs-logger-env") # access GitHubActions.jl
-            using Logging: global_logger
-            using GitHubActions: GitHubActionsLogger
-            global_logger(GitHubActionsLogger())
+            push!(LOAD_PATH, "@docs-logger-env") # access GitHubActions.jl
+            import Logging, GitHubActions
+            Logging.global_logger(GitHubActions.GitHubActionsLogger())
+            pop!(LOAD_PATH)
             include("docs/make.jl")' )
 
         # Add the prefix in front of the command if there is one
