--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,12 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: Install GitHubActions.jl in its own (shared) environment
+      run: |
+        using Pkg
+        Pkg.activate("docs-logger-env"; shared=true)
+        Pkg.add(Pkg.PackageSpec(name="GitHubActions", version="0.1"))
+      shell: julia --color=yes {0}
     - run: |
         # The Julia command that will be executed
         julia_cmd=( julia --color=yes --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()' )
@@ -26,10 +32,16 @@ runs:
         # Run the Julia command
         "${julia_cmd[@]}"
       shell: bash
-
     - run: |
         # The Julia command that will be executed
-        julia_cmd=( julia --color=yes --project=docs/ docs/make.jl )
+        julia_cmd=( julia --color=yes --project=docs/ -e '
+            @eval Module() begin
+                push!(LOAD_PATH, "@docs-logger-env") # access GitHubActions.jl
+                import Logging, GitHubActions
+                Logging.global_logger(GitHubActions.GitHubActionsLogger())
+                pop!(LOAD_PATH)
+            end
+            include("docs/make.jl")' )
 
         # Add the prefix in front of the command if there is one
         prefix="${{ inputs.prefix }}"
