--- a/action.yml
+++ b/action.yml
@@ -43,7 +43,8 @@ runs:
             @eval Module() begin
                 push!(LOAD_PATH, "@docs-logger-env") # access GitHubActions.jl
                 import Logging, GitHubActions
-                Logging.global_logger(GitHubActions.GitHubActionsLogger())
+                # Disable for now, due to https://github.com/julia-actions/julia-docdeploy/issues/31
+                # Logging.global_logger(GitHubActions.GitHubActionsLogger())
                 pop!(LOAD_PATH)
             end
             include("docs/make.jl")' )
