--- a/action.yml
+++ b/action.yml
@@ -43,7 +43,7 @@ runs:
         "${julia_cmd[@]}"
       shell: bash
       working-directory: ${{inputs.project}}
-      if: ${{ inputs.install-package }}
+      if: ${{ inputs.install-package == 'true'}}
     - name: Build the documentation
       run: |
         # The Julia command that will be executed
